--- a/components.json
+++ b/components.json
@@ -13,5 +13,10 @@
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils"
+  },
+  "registries": {
+    "@acme": "https://acme.com/r/{name}.json",
+    "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
+    "@cult-ui": "https://cult-ui.com/r/{name}.json"
   }
 }
