--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/render": "^1.3.1",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/papaparse": "^5.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.2.1",
     "resend": "^6.1.2",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
