--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clsx": "^2.1.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -43,7 +43,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^15.5.7",
     "shadcn": "^3.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
