--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "clsx": "^2.1.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
-    "next": "^15.5.7",
+    "next": "^16.1.1",
     "papaparse": "^5.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "recharts": "^3.2.1",
     "resend": "^6.1.2",
     "tailwind-merge": "^3.3.1",
@@ -42,8 +42,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
-    "eslint-config-next": "^15.5.7",
+    "eslint-config-next": "^16.1.1",
     "shadcn": "^3.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
